--- a/style.css
+++ b/style.css
@@ -84,7 +84,7 @@
     /* Относительная высота для телефонов */
     .image-button1, .image-button2, .image-button3, 
     .image-button4, .image-button6 {
-        top: 20vh; /* 3% от высоты экрана */
+        top: 30px; /* 3% от высоты экрана */
     }
     
     /* На телефоне делаем кнопки вертикально или ближе */
@@ -109,7 +109,7 @@
     /* Меньшая высота на очень маленьких экранах */
     .image-button1, .image-button2, .image-button3, 
     .image-button4, .image-button6 {
-        top: 20vh; /* 2% от высоты экрана */
+        top: 20px; /* 2% от высоты экрана */
     }
 }
 
@@ -214,3 +214,4 @@
     }
 
 }
+
