--- a/style.css
+++ b/style.css
@@ -84,7 +84,7 @@
     /* Относительная высота для телефонов */
     .image-button1, .image-button2, .image-button3, 
     .image-button4, .image-button6 {
-        top: 50vh; /* 3% от высоты экрана */
+        top: 50px; /* 3% от высоты экрана */
     }
     
     /* На телефоне делаем кнопки вертикально или ближе */
@@ -109,7 +109,7 @@
     /* Меньшая высота на очень маленьких экранах */
     .image-button1, .image-button2, .image-button3, 
     .image-button4, .image-button6 {
-        top: 40vh; /* 2% от высоты экрана */
+        top: 40px; /* 2% от высоты экрана */
     }
 }
 
@@ -147,13 +147,13 @@
 
 @media (max-width: 767px) {
     .image-button5 {
-        top: 50vh; /* 4% от высоты экрана на телефоне */
+        top: 50px; /* 4% от высоты экрана на телефоне */
     }
 }
 
 @media (max-width: 480px) {
     .image-button5 {
-        top: 40vh; /* 3% от высоты экрана на маленьких телефонах */
+        top: 40px; /* 3% от высоты экрана на маленьких телефонах */
     }
 }
 
@@ -213,6 +213,7 @@
         width: 50px; /* Очень маленький */
     }
 }
+
 
 
 
